Add dnspython package

--- a/2.1/Dockerfile
+++ b/2.1/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update -qq && \
     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -qq -y vim &&\
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
-    pip install ansible~=2.1.0
+    pip install ansible~=2.1.0 dnspython
