--- a/1.9/Dockerfile
+++ b/1.9/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update -qq && \
     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -qq -y vim && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
-    pip install ansible~=1.9.0
+    pip install ansible~=1.9.0 dnspython
