--- a/2.7/Dockerfile
+++ b/2.7/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:2.7
 
 RUN apt-get update -qq && \
-    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -qq -y vim && \
+    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -qq -y vim sshpass && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
     pip install ansible~=2.7.0 dnspython
