--- a/6.0/Dockerfile
+++ b/6.0/Dockerfile
@@ -5,4 +5,4 @@ RUN apt-get update -qq && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN pip install ansible~=6.0.0 paramiko
+RUN pip install pywinrm ansible~=6.0.0 paramiko
