--- a/10.5/Dockerfile
+++ b/10.5/Dockerfile
@@ -5,6 +5,6 @@ RUN apt-get update -qq && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-ADD ./sshconfig /root/.ssh/config
+COPY ./sshconfig /root/.ssh/config
 
 RUN pip install pywinrm ansible~=10.5.0 paramiko
